--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Контактная информация</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css?v=2">
 </head>
 <body>
     <div class="vcard">
@@ -29,16 +29,16 @@
 
             <div class="contact">
                 <p class="name">Сергей</p>
-                <p class="phone">+7 (925) 203-8459</p>
+                <p class="phone">+7 999 999-9999</p>
             </div>
 
             <div class="contact">
                 <p class="name">Евгений</p>
-                <p class="phone">+7 (916) 875-8385</p>
+                <p class="phone">+7 999 888-8888</p>
             </div>
 
             <div class="telegram">
-                <a href="https://t.me/electricapushino" target="_blank">Мы в Telegram</a>
+                <a href="http://tg.me" target="_blank">Написать в Telegram</a>
             </div>
         </div>
     </div>
