--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class="vcard">
         <div class="card-content">
             <h1>Контакты</h1>
+            <p class="slogan">От столба до розетки</p>
             
             <!-- 
                 ИНСТРУКЦИЯ ПО РЕДАКТИРОВАНИЮ
