--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
 
             <div class="contact">
                 <p class="name">Сергей</p>
-                <p class="phone">+7 999 999-9999</p>
+                <p class="phone">+7 (925) 203-8459</p>
             </div>
 
             <div class="contact">
                 <p class="name">Евгений</p>
-                <p class="phone">+7 999 888-8888</p>
+                <p class="phone">+7 916 875-8385</p>
             </div>
 
             <div class="telegram">
-                <a href="http://tg.me" target="_blank">Написать в Telegram</a>
+                <a href="https://t.me/electricapushino" target="_blank">Мы в Telegram</a>
             </div>
         </div>
     </div>
