--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
             <div class="contact">
                 <p class="name">Евгений</p>
-                <p class="phone">+7 916 875-8385</p>
+                <p class="phone">+7 (916) 875-8385</p>
             </div>
 
             <div class="telegram">
